# diffable

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  readme.md
.githooks/: pre-commit
src/: complex.rs  coords.rs  discrete.rs  epsilon_metric.rs  flat.rs  hypersphere.rs  lib.rs  manifold_graph.rs  matrix.rs  nalgebra.rs  spacetime.rs  torus.rs  traits.rs
src/traits/: algebra.rs  chart.rs  complex.rs  euclidean.rs  foundation.rs  group.rs  mod.rs  simplicial.rs  testing.rs  vector.rs
tests/: common.rs  complex.rs  coords.proptest-regressions  coords.rs  discrete.rs  flat.proptest-regressions  flat.rs  hypersphere.proptest-regressions  hypersphere.rs  spacetime.rs  torus.rs
