[package]
name = "diffable"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[lib]
name = "diffable"
doctest = false

[features]
testing = ["dep:proptest"]
all = ["testing"]

[dependencies]
num-traits = "0.2.19"
proptest = { version = "1.11.0", optional = true }
itertools = "0.15.0"
num-derive = "0.4.2"
