[package]
name = "diffable"
version = "0.1.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "a differential geometry framework for rust"
readme = "readme.md"
homepage = "https://aaroncottle.au"
repository = "https://github.com/minerscale/diffable"
keywords = ["math", "maths", "mathematics", "geometry", "differential geometry", "abstract algebra", "algebra"]
categories = ["mathematics", "science"]

[package.metadata.docs.rs]
all-features = true

[lib]
path = "src/lib.rs"
name = "diffable"
doctest = false

[features]
testing = ["dep:proptest"]
all = ["testing"]

[dependencies]
num-traits = "0.2.19"
proptest = { version = "1.11.0", optional = true }
itertools = "0.15.0"
num-derive = "0.4.2"
